# xp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
agents/: ship.md
docs/: PRIVACY.md  PUBLISH.md
examples/: README.md  config.anthropic.toml  config.mcp.toml  config.openai.toml
personas/: concise.toml  thorough.toml
roles/: reviewer.toml
scripts/: sync_data.sh
skills/fix/: SKILL.md
skills/refactor/: SKILL.md
skills/review/: SKILL.md
skills/ship/: SKILL.md
skills/test/: SKILL.md
src/xp/: __init__.py  __main__.py  agent.py  audit.py  backends.py  cli.py  config.py  diffutil.py  mcp_client.py  patch.py  paths.py  prompts.py  session.py  skills.py  telemetry.py  tools.py  tui.py  web.py
src/xp/data/: AGENTS.md
src/xp/data/agents/: debug.md
src/xp/data/skills/commit/: SKILL.md
src/xp/data/skills/pr/: SKILL.md
src/xp/data/skills/release/: SKILL.md
tests/: test_agent_loop.py  test_anthropic_stream.py  test_audit.py  test_config.py  test_data_sync.py  test_mcp_config.py  test_patch.py  test_session.py  test_skills.py  test_skills_match.py  test_telemetry.py  test_tools.py  test_tui.py  test_web.py
