[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xp-harness"
version = "0.6.0"
description = "Standalone coding agent harness — skills, tools, OpenAI-compatible APIs (no Grok required)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "xp contributors" }]
keywords = ["agent", "coding", "llm", "harness", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "openai>=1.40.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
xp = "xp.cli:main"

[project.urls]
Homepage = "https://github.com/245678000000/xp"
Repository = "https://github.com/245678000000/xp"

[tool.hatch.build.targets.wheel]
packages = ["src/xp"]

[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md" = "xp/data/AGENTS.md"
"skills" = "xp/data/skills"
"agents" = "xp/data/agents"

[tool.hatch.build.targets.sdist]
include = [
  "src/xp",
  "AGENTS.md",
  "skills",
  "agents",
  "personas",
  "roles",
  "README.md",
  "README.en.md",
  "LICENSE",
  "install.sh",
]
