[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xp-harness"
dynamic = ["version"]
description = "Standalone coding agent harness — skills, tools, OpenAI-compatible APIs (no Grok required)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "xp contributors" }]
keywords = ["agent", "coding", "llm", "harness", "cli", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "openai>=1.40.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.0"]
tui = ["prompt_toolkit>=3.0.36"]
all = ["prompt_toolkit>=3.0.36"]

[project.scripts]
xp = "xp.cli:main"

[project.urls]
Homepage = "https://github.com/245678000000/xp"
Repository = "https://github.com/245678000000/xp"
Issues = "https://github.com/245678000000/xp/issues"
Changelog = "https://github.com/245678000000/xp/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/xp/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/xp",
  "AGENTS.md",
  "skills",
  "agents",
  "personas",
  "roles",
  "examples",
  "tests",
  "scripts",
  "README.md",
  "README.en.md",
  "CHANGELOG.md",
  "LICENSE",
  "install.sh",
  "requirements.txt",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xp"]
# Harness content ships from src/xp/data/ (keep in sync via scripts/sync_data.sh)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
